# cappuccino

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-docker-image.yml  build.yml  ci.yml  lint.yml  release.yml  test.yml
cappuccino/: __init__.py  __main__.py  bot.py  catfacts.py  database.py  execshell.py  fun.py  rice.py  sentry.py  settings.py  uptimekuma.py  urlinfo.py
cappuccino/config/: default.toml
cappuccino/db/alembic/: env.py
cappuccino/db/alembic/versions/: 38e47afd4586_add_channels_table.py  c7308e3c814a_seperate_ricedb_json_into_columns.py  d4e9f1a2b3c4_migrate_ai_channels_to_channels.py  e3f1a2b4c5d6_rename_ricedb_to_users.py  e5f0a1b2c3d4_add_fk_triggers_channel_to_channels.py
cappuccino/db/models/: ai.py  ircdb.py  triggers.py  userdb.py
cappuccino/plugins/: __init__.py  ai.py  botui.py  catfacts.py  execshell.py  fun.py  heartbeat.py  influx.py  ircdb.py  lastfm.py  nickserv.py  rice.py  sed.py  seen.py  sentry.py  triggers.py  uptimekuma.py  urlinfo.py  userdb.py
cappuccino/util/: channel.py  irc.py  meta.py
docker/: .env.example  Dockerfile  compose.yaml
docker/rootfs/: docker-entrypoint.sh
tests/: conftest.py  test_migrations.py
tests/plugins/: test_ai.py  test_fun.py  test_ircdb.py  test_rice.py  test_sed.py  test_seen.py  test_triggers.py  test_userdb.py
