[project]
name = "cappuccino"
description = "Just another IRC bot."
authors = [{ name = "Lee Watson", email = "me@lwatson.dev" }]
version = "1.27.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "dynaconf>=3.2.13",
    "beautifulsoup4>=4.15.0",
    "aiohttp>=3.14.1",
    "html5lib>=1.1",
    "niquests[speedups]>=3.19.1",
    "humanize>=4.15.0",
    "influxdb-client>=1.50.0",
    "irc3>=1.1.10",
    "ircstyle>=0.1.5",
    "markovify>=0.9.4",
    "psycopg[binary,pool]>=3.3.4",
    "pylast>=7.0.2",
    "sentry-sdk>=2.63.0",
    "sqlalchemy>=2.0.51",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "hadolint-py>=2.14.0.1",
    "prek>=0.4.5",
    "pytest>=9.1.0",
    "pytest-check>=2.8.0",
    "pytest-postgresql>=8.1.0",
    "ruff>=0.15.18",
    "shellcheck-py>=0.11.0.1",
    "yamllint>=1.38.0",
]

[tool.ruff]
force-exclude = true
extend-exclude = ["docker/data/", "docker/config/"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FBT",
    "FIX",
    "FLY",
    "FURB",
    "G010",
    "G101",
    "G201",
    "G202",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "T20",
    "TC",
    "TD",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]

# ruff format compatibility
ignore = [
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "E501",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

extend-ignore = ["ARG002", "PLR0912", "PLR0915", "PLW2901", "RUF012", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:irc3",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
